[package]
name = "t9"
version = "0.2.2"
authors = ["Daan van Berkel <daan.van.berkel@alliander.com>"]
description = "Easily create port number from words and vice versa"
repository = "https://github.com/fifth-postulate/T9"
readme = "README.md"
license = "MIT"
keywords = ["predictive", "text", "T9"]
edition = "2018"

[badges]
travis-ci = { repository = "fifth-postulate/T9" }

[dependencies]
clap = "2.33.0"
